# ralph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LOGGING.md  LOGGING_IMPROVEMENTS.md  RALPH.md  README.md  TEST_README.md  TODO.md  WHEEL.md  progress.md  pyproject.toml  ralph-remote.sh  ralph.py  test_enhanced_logging.py
prompts/: outer-prompt-default.md  prompt-code-review.md
src/ralph/: __init__.py  __main__.py  core.py  get_definition.py
src/ralph/prompts/: outer-prompt-concise.md  outer-prompt-default.md  prompt-code-review.md  prompt-macos-sre-tools.md  prompt-og-command-line.md
tests/: conftest.py  test_enhanced_logging.py  test_false_positive_demo.py  test_installation.py  test_log_streaming.py  test_nested_compat.py  test_nested_compat_fixed.py  test_prompt_loading.py  test_sys_scope_fix.py  test_timeout.py  test_token_optimization.py  test_token_optimization_verified.py
